--- a/src/components/PageNotFound/index.css
+++ b/src/components/PageNotFound/index.css
@@ -1,6 +1,16 @@
 .bg-page-not-found {
-  height: 100vh;
-  background: no-repeat center center fixed;
+  position: relative;
+  animation: sharpen 0.5s both;
+}
+
+.bg-page-not-found::before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  opacity: 1;
+  width: 100%;
+  height: 100%;
+  background: no-repeat center fixed;
   background-size: cover;
 }
 
@@ -9,7 +19,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  min-height: 80vh;
 }
 
 .page-not-found-text {
@@ -48,41 +58,41 @@
 }
 
 @media screen and (max-width: 449px), screen and (max-height: 299px) {
-  .bg-page-not-found {
+  .bg-page-not-found::before {
     background-image: url('../../assets/img/pagenotfound/500w.jpg');
   }
 }
 
 @media screen and (min-width: 450px) and (max-width: 949px),
   screen and (min-height: 300px) and (max-height: 499px) {
-  .bg-page-not-found {
+  .bg-page-not-found::before {
     background-image: url('../../assets/img/pagenotfound/1000w.jpg');
   }
 }
 
 @media screen and (min-width: 950px) and (max-width: 1449px),
   screen and (min-height: 500px) and (max-height: 999px) {
-  .bg-page-not-found {
+  .bg-page-not-found::before {
     background-image: url('../../assets/img/pagenotfound/1500w.jpg');
   }
 }
 
 @media screen and (min-width: 1450px) and (max-width: 1949px),
   screen and (min-height: 1000px) and (max-height: 1349px) {
-  .bg-page-not-found {
+  .bg-page-not-found::before {
     background-image: url('../../assets/img/pagenotfound/2000w.jpg');
   }
 }
 
 @media screen and (min-width: 1950px) and (max-width: 2449px),
   screen and (min-height: 1350px) and (max-height: 1699px) {
-  .bg-page-not-found {
+  .bg-page-not-found::before {
     background-image: url('../../assets/img/pagenotfound/2500w.jpg');
   }
 }
 
 @media screen and (min-width: 2450px), screen and (min-height: 1700px) {
-  .bg-page-not-found {
+  .bg-page-not-found::before {
     background-image: url('../../assets/img/pagenotfound/3840w.jpg');
   }
 }
